--- a/src/style_new_vid.css
+++ b/src/style_new_vid.css
@@ -1,5 +1,5 @@
 /* style.css para new_video.html */
-/*
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -17,7 +17,7 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-  }*/
+  }
   
   .new-video-page h1 {
     text-align: center;
@@ -26,14 +26,13 @@ body {
   .file-upload-container {
     display: flex;
     margin-bottom: 20px;
-    width: 50%;
   }
   
   .file-upload-box {
     display: flex;
     flex: 1;
     align-items: center;
-    /*height: 50vh;*/
+    justify-content: center; /* Centra tanto horizontal como verticalmente */
     padding: 50px;
     border: 2px dashed #000000;
     background-color: rgb(226, 220, 220);
@@ -51,6 +50,8 @@ body {
     padding: 20px; /* Ajusta el tamaño del botón según sea necesario */
     color: #ffffff; /* Color del texto */
     align-items: center;
+    justify-content: center;
+    text-align: center; /* Asegura que el texto esté centrado */
   }
   
   .file-upload-box span {
@@ -58,6 +59,7 @@ body {
     line-height: 1; /* Ajusta la altura de línea según sea necesario */
     align-items: center;
   }
+  
   
   .file-upload-box input {
     display: none;
@@ -124,4 +126,50 @@ input {
 
 label {
   margin-bottom: 10px;
+}
+
+/* Estilos del modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Estilos de la barra de carga */
+.progress-bar {
+  width: 0;
+  height: 20px;
+  background-color: #4CAF50;
+  border-radius: 10px;
+  margin-top: 10px;
 }
