--- a/src/style_new_vid.css
+++ b/src/style_new_vid.css
@@ -173,3 +173,29 @@ label {
   border-radius: 10px;
   margin-top: 10px;
 }
+
+
+.modal-completed {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content-completed {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.modal button {
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
