--- a/src/style_results.css
+++ b/src/style_results.css
@@ -1,26 +1,15 @@
+* {box-sizing: border-box;}
+
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-  .header-container{
-    display: flex;
-  }
+.header-container{
+  display: flex;
+  flex-direction: column;
+}
 
   .main {
     text-align: center;
@@ -28,26 +17,137 @@ body {
   
   .centered {
     text-align: center;
+    margin-bottom: 100px;
   }
   
   .results-details {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: block;
+    width: 50%; /* Ancho para la mitad izquierda */
+    text-align: center;
     margin-bottom: 20px;
-  }
-  
-  .parameter {
-    margin: 10px;
+    float: left; /* Alinea a la izquierda */
   }
   
   .results-image {
-    flex: 1;
-    text-align: center;
+    width: 50%;
+    float: left;
+    margin-bottom: 100px;
+    position: relative;
+  }
+  /*
+  img.zoom {
+    width: 350px;
+    height: 200px;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+}
+ 
+.transition {
+    -webkit-transform: scale(2); 
+    -moz-transform: scale(2);
+    -o-transform: scale(2);
+    transform: scale(2);
+}*/
+
+  .parameter {
+    margin: 30px;
   }
   
+  .parameter label {
+    font-weight: bold; /* Establece el texto de la etiqueta en negrita */
+  }
+  
+  .parameter span {
+    display: inline-block;
+    padding: 5px; /* Agrega un relleno alrededor del resultado */
+    border: 1px solid #ccc; /* Agrega un borde alrededor del resultado */
+  }
+
   .results-image img {
     max-width: 100%;
     height: auto;
+    margin-bottom: 20px;
   }
   
+  .date{
+    text-align: right;
+    justify-content: right;
+    margin-top: 10px;
+    margin-right: 2%;
+  }
+
+
+  .action-buttons {
+    text-align: center;
+    margin-top: 100px;
+  }
+  
+  .action-buttons button {
+    width: 200px; /* Ancho fijo para los botones, ajusta según tu preferencia */
+    min-width: 200px; /* Ancho mínimo para asegurar consistencia */
+    margin: 0 50px;
+    padding: 10px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    transition: all .5s ease-in-out;
+  }
+
+  .action-buttons button:hover{
+    transform: scale(1.3);
+  }
+
+  /* Estilos para los modales */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+/* Estilo del botón "Descartar" (rojo) */
+#descartarBtn {
+  background-color: #e74c3c;
+  color: #ffffff;
+}
+
+/* Estilo del botón "Guardar" (verde) */
+#guardarBtn {
+  background-color: #2ecc71;
+  color: #ffffff;
+}
+
+/* Estilo de los botones dentro de los modales */
+.modal button {
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+/*
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}*/
