--- a/src/style_results.css
+++ b/src/style_results.css
@@ -82,6 +82,7 @@ body {
   .action-buttons {
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 50px;
   }
   
   .action-buttons button {
