--- a/src/style_new_vid.css
+++ b/src/style_new_vid.css
@@ -26,6 +26,8 @@ body {
   .file-upload-container {
     display: flex;
     margin-bottom: 20px;
+    width: 100%;
+    height: 100%;
   }
   
   .file-upload-box {
@@ -39,9 +41,11 @@ body {
     border-radius: 10px;
     text-align: center;
     margin-right: 10px;
-    width: 25%;
+    width: 100%;
+    height: 100%;
   }
   
+
   .file-upload-box label {
     display: block;
     cursor: pointer;
